Add build to test changes

--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
   },
   "peerDependencies": {
     "@stripe/connect-js": "^1.0.4",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   }
 }
